--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,21 @@ html {
 }
 
 .hero {    
+    max-width: 1600px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
     background-color: var(--bgr-hero);
+    background-image: linear-gradient(
+        to right, 
+        rgba(47, 48, 58, 0.4),  
+        rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-fon.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /* background-image: rgba(47, 48, 58, 0.4); */
     text-align: center;
     padding: 200px 350px;
     
