--- a/css/styles.css
+++ b/css/styles.css
@@ -157,36 +157,6 @@ img {
     letter-spacing: 0.02em; 
 }
 
-
-/* .social-icon-list {
-    justify-content: center;
-    margin-bottom: 30px;
-}
-
-.social-icon {
-    fill: #afb1b8;
-}
-
-.social-icon-item:not(:last-child) {
-    margin-right: 10px;
-}
-
-.social-icon-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 44px;
-    height: 44px;
-    background-color: #fff;
-    border-radius: 50%;
-}
-
-.social-icon-link:hover .social-icon, 
-.social-icon-link:focus .social-icon {
-    fill: var(--footer-text-color);    
-} */
-
-
 .contact-icon-link:hover .contact-icon,
 .contact-icon-link:focus .contact-icon {
     fill: var(--accent-text-color);
@@ -547,13 +517,24 @@ img {
 
 /* footer */
 .footer {
+    /* display: flex; */
     background-color: var(--bgr-footer);
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 60px;   
+}
+
+.footer .address-logo {
+    width: 250px;
+    margin-right: 70px;
+}
+
+.common {
+    display: block;   
 }
 
 .common-title {
     color: var(--header-bg-color);
+    margin-top: 0px;    
 }
 
 .common-icon-item:not(:last-child) {
@@ -611,3 +592,17 @@ img {
     color: var(--address-text-color);
     text-decoration: none;
 }
+
+.logo .white {
+    color: var(--hero-text-color);
+}
+
+.flex-container {
+    display: flex; 
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
